@@ -1,4 +1,5 @@
 18 Apr 2018
+update: cookie lifetime to 1 as default
 fix: site not working without redis installed and used as php session handler
 
 17 Apr 2018
